test/diff-cluster-connect/externalname-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-external-service
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.58.101
  ports:
    - protocol: TCP
      port: 32686
