test/diff-cluster-connect/testapp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-svc
  namespace: loki-stack
spec:
  ports:
  - name: service
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: loki-name
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: NodePort
