test/diff-cluster-connect/web-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: test-ing
    namespace: default
    annotations: 
      nginx.ingress.kubernetes.io/rewrite-target: /$2
  spec:
    ingressClassName: nginx
    rules:
      - http:
          paths:
            - pathType: ImplementationSpecific
              path: /testapp(/|$)(.*) 
              backend:
                service: 
                  name: was-external-service
                  port:
                    number: 32686
